email integeration with brevo

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "resend": "^6.9.2",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
